--- a/OrganWeb/OrganWeb/Areas/Sistema/Views/Funcionario/Delete.cshtml
+++ b/OrganWeb/OrganWeb/Areas/Sistema/Views/Funcionario/Delete.cshtml
@@ -29,11 +29,27 @@
         </dd>
 
         <dt>
+            @Html.DisplayNameFor(model => model.User.Email)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.User.Email)
+        </dd>
+
+        <dt>
             @Html.DisplayNameFor(model => model.Nome)
         </dt>
 
         <dd>
             @Html.DisplayFor(model => model.Nome)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.Sobrenome)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Sobrenome)
         </dd>
 
         <dt>
@@ -106,6 +122,14 @@
 
         <dd>
             @Html.DisplayFor(model => model.PeriodoContratacao)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.MesAno)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.MesAno)
         </dd>
 
     </dl>
